manifests/app/1-mariadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-mariadb
  namespace: app1
  labels:
    app: app1
spec:
  ports:
    - port: 3306
  selector:
    app: app1
    tier: mariadb
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-mariadb
  namespace: app1
  labels:
    app: app1
spec:
  selector:
    matchLabels:
      app: app1
      tier: mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: app1
        tier: mariadb
    spec:
      containers:
      - image: mariadb:11
        name: mariadb
        ports:
        - containerPort: 3306
          name: mariadb
        volumeMounts:
        - name: mariadb-persistent-storage
          mountPath: /var/lib/mariadb
        livenessProbe:
          tcpSocket:
            port: 3306
        resources:
          limits:
            cpu: 1
            memory: 512Mi
          requests:
            cpu: 30m
            memory: 256Mi
      volumes:
      - name: mariadb-persistent-storage
        persistentVolumeClaim:
          claimName: mariadb-pv-claim
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app1-mariadb-policy
  namespace: app1
spec:
  podSelector:
    matchLabels:
      app: app1
      tier: mariadb
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: app1
              tier: mariadb
      ports:
        - protocol: TCP
          port: 3306
  egress:
    - to:
        - podSelector: {}
